<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/folder"
            android:title="@string/action_files" />
        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/people"
            android:title="@string/action_shared" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/star_rate"
            android:title="@string/action_starred" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/schedule"
            android:title="@string/action_recent" />
    </group>
</menu>